# pakej

./: .gitignore  .travis.yml  .vim.custom  Guardfile  Pakej-Client.html  Pakej-Conf.html  Pakej-Daemon-Daemonize.html  Pakej-Daemon.html  Pakej-Protocol.html  Pakej-Widget-Cpu.html  Pakej-Widget-Memory.html  Pakej-Widget.html  Pakej.html  README.md  Tutorial.md  doc-index.html  index-frames.html  index.html  mini_Pakej-Client.html  mini_Pakej-Conf.html  mini_Pakej-Daemon-Daemonize.html  mini_Pakej-Daemon.html  mini_Pakej-Protocol.html  mini_Pakej-Widget-Cpu.html  mini_Pakej-Widget-Memory.html  mini_Pakej-Widget.html  mini_Pakej.html  pakej.cabal  pakej.haddock
data/: _pakej  pakej.hs
example/: Main.hs  aggregation.hs  datetime.hs  widget.hs
src/: Pakej-Client.html  Pakej-Conf.html  Pakej-Daemon-Daemonize.html  Pakej-Daemon.html  Pakej-Protocol.html  Pakej-Widget-Cpu.html  Pakej-Widget-Memory.html  Pakej-Widget.html  Pakej.hs  Pakej.html  Paths_pakej.html
src/Pakej/: Action.hs  Client.hs  Communication.hs  Conf.hs  Daemon.hs  Protocol.hs  Widget.hs
src/Pakej/Daemon/: Daemonize.hs
src/Pakej/Widget/: Cpu.hs  Memory.hs
test/Pakej/: CommunicationSpec.hs  ConfSpec.hs  ProtocolSpec.hs
test/Pakej/Widget/: CpuSpec.hs  MemorySpec.hs
