name:                pakej
version:             0.2.0.0
synopsis:            Status bar daemon
-- description:         
homepage:            http://example.com/
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  example/Main.hs
  data/_pakej

library
  default-language:  Haskell2010
  build-depends:
      base                 == 4.*
    , bytestring
    , cereal
    , containers
    , directory
    , filepath
    , lens                 >= 4.0
    , network
    , optparse-applicative
    , text
    , unix
    , netwire              == 4.*
    , transformers
  hs-source-dirs:    src
  exposed-modules:
    Pakej
    Pakej.Client
    Pakej.Communication
    Pakej.Conf
    Pakej.Daemon
    Pakej.Daemon.Daemonize
    Pakej.Widget
  other-modules:
    Paths_pakej

executable pakej
  default-language:  Haskell2010
  build-depends:
      base == 4.*
    , bytestring
    , directory
    , filepath
    , unix
  hs-source-dirs:    bin
  main-is:           Main.hs

test-suite spec
  type: exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:
      base == 4.*
    , bytestring
    , cereal
    , directory
    , filepath
    , hspec
    , hspec-expectations-lens
    , lens
    , network
    , optparse-applicative
    , text
  hs-source-dirs:
    src
    test
  main-is:           Spec.hs
  cpp-options:       -DTEST
